--- a/xyz.css
+++ b/xyz.css
@@ -4,7 +4,7 @@ body{
   background: #000000;
 }
 .search-box{
-  position: absolute;
+  position: relative;
   top:50%;
   left: 50%;
   transform: translate(-50%,-50%);
@@ -12,10 +12,13 @@ body{
   height: 40px;
   border-radius: 40px;
   padding: 7px;
+   margin-left:90px;
+  margin-right:310px;
 }
 
 .search-box:hover > .search-btn{
 background:blue
+  margin
 }
 .search-btn{
   color:#0779e4;
